# Research-agent

./: README.md
research_agent/: main.py  orchestrator.py  pyproject.toml
research_agent/agents/: analyzer_agent.py  llm.py  research_agent.py  writer_agent.py
research_agent/database/: agent_memory.py
research_agent/memory/: agent_memory.db
research_agent/prompts/: analyzer_agent_prompt.py  reasearch_agent_prompt.py  writer_agent_prompt.py
research_agent/settings/: config.py
