[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.1",
    "tavily>=1.1.0",
    "langchain_core",
    "langgraph",
    "langchain_google_genai",
    "plotly>=6.5.0",
    "fastapi>=0.128.0",
    "deepeval>=3.7.8",
    "langsmith>=0.5.1",
]
